--- a/src/components/Founders.astro
+++ b/src/components/Founders.astro
@@ -2,7 +2,7 @@
   <h2 class="text-2xl font-bold">Founders</h2>
   
   <!-- Mobile layout: image full width above text -->
-  <div class="md:hidden">
+  <div class="md:hidden mt-4">
     <img src="/tar-founders.png" alt="Tony Pelosi and Chi-An Emhoff, founders of Track Attack Running" class="w-full h-auto rounded-lg mb-4">
     <p class="mb-4">Track Attack Running originated at American River College in Sacramento in 2004. It was founded by Tony Pelosi and Chi-An (Wang) Emhoff as part of Total Body Fitness before launching their own business in 2007. As collegiate track captains who went on to become competitive amateur triathletes, they adapted lessons from masters swimming to turn monotonous track workouts into fun and engaging group experiences that could be enjoyed by athletes of all levels.</p>
     
@@ -10,7 +10,7 @@
   </div>
   
   <!-- Desktop layout: image left, text wrapping around -->
-  <div class="hidden md:block">
+  <div class="hidden md:block mt-4">
     <div class="relative">
       <img src="/tar-founders.png" alt="Tony Pelosi and Chi-An Emhoff, founders of Track Attack Running" class="float-left w-80 h-auto rounded-lg mr-6 mb-4">
       
