--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,10 @@ import Founders from "../components/Founders.astro";
 import Gallery from "../components/Gallery.astro";
 import Book from "../components/Book.astro";
 import Contact from "../components/Contact.astro";
+import RevealScript from "../components/RevealScript.astro";
 ---
 <Layout>
+  <RevealScript />
   <Hero />
   <About />
   <Founders />
