--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,5 +1,4 @@
 <section id="gallery" class="max-w-4xl mx-auto p-6 reveal">
-  <div class="h-1.5 bg-gradient-to-r from-primary to-accentLight rounded-full mb-4 -skew-x-6"></div>
   <h2 class="text-2xl font-bold">Gallery</h2>
 
   <div class="relative mt-4">
@@ -118,7 +117,14 @@
       this.updateActiveDot();
     }
 
-    nextPage() { this.scrollToPage(this.currentPage + 1); }
+    nextPage() {
+      const lastPage = this.pageCount() - 1;
+      if (this.currentPage >= lastPage) {
+        this.scrollToPage(0);
+      } else {
+        this.scrollToPage(this.currentPage + 1);
+      }
+    }
     prevPage() { this.scrollToPage(this.currentPage - 1); }
 
     updateActiveDot() {
