--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,13 +10,22 @@ import RevealScript from "../components/RevealScript.astro";
 ---
 <Layout>
   <RevealScript />
-  <Hero />
-  <About />
-  <Coaches />
-  <Gallery />
-  <Book />
-  <div class="max-w-4xl mx-auto px-6">
-    <div class="h-1.5 bg-gradient-to-r from-primary to-accentLight rounded-full -skew-x-6"></div>
-  </div>
-  <Contact />
+  <section class="band-light -mt-12 pt-12">
+    <Hero />
+  </section>
+  <section class="band-bright">
+    <About />
+  </section>
+  <section class="band-light">
+    <Coaches />
+  </section>
+  <section class="band-bright">
+    <Gallery />
+  </section>
+  <section class="band-light">
+    <Book />
+  </section>
+  <section class="band-bright">
+    <Contact />
+  </section>
 </Layout>
